[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/UI/PauseScreen.png" type="Texture" id=1]
[ext_resource path="res://RateUs.gd" type="Script" id=2]
[ext_resource path="res://ui/RegularMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/largeButtondisabled.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/largebuttonclicked.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/largebutton.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/largebuttonhover.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/pausefont.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/sounds/Click.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 8 )

[node name="RegularMenu" type="Panel"]
self_modulate = Color( 0.286275, 0.286275, 0.286275, 0.580392 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -130.0
margin_right = 170.0
margin_bottom = 143.0
texture = ExtResource( 1 )
region_rect = Rect2( -1.82913, 0, 821.356, 511 )
patch_margin_left = 70
patch_margin_right = 74
patch_margin_bottom = 57

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -22.0
margin_right = 68.0
margin_bottom = 22.0

[node name="ResumeButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_right = 136.0
margin_bottom = 25.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/ResumeButton"]
margin_left = 29.4707
margin_top = 6.14352
margin_right = 107.471
margin_bottom = 20.1435
custom_fonts/font = ExtResource( 9 )
text = "Resume"

[node name="Control2" type="Control" parent="NinePatchRect/VBoxContainer"]
margin_top = 29.0
margin_right = 136.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 5 )

[node name="BackButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 136.0
margin_bottom = 63.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 4 )

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/BackButton"]
margin_left = 10.3377
margin_top = 7.40487
margin_right = 127.338
margin_bottom = 21.4049
custom_fonts/font = ExtResource( 9 )
text = "Main Menu"

[node name="Control3" type="Control" parent="NinePatchRect/VBoxContainer"]
margin_top = 67.0
margin_right = 136.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 5 )

[node name="RateUs" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 76.0
margin_right = 136.0
margin_bottom = 101.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/RateUs"]
margin_left = 23.317
margin_top = 5.84622
margin_right = 114.317
margin_bottom = 19.8462
custom_fonts/font = ExtResource( 9 )
text = "Rate us"

[node name="Click" type="AudioStreamPlayer" parent="NinePatchRect/VBoxContainer/RateUs"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="Label" type="Label" parent="NinePatchRect"]
modulate = Color( 0.494118, 0.313726, 0.0352941, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.648
margin_top = -77.7424
margin_right = 140.352
margin_bottom = -52.7424
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[connection signal="visibility_changed" from="." to="." method="_on_RegularMenu_visibility_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/RateUs" to="NinePatchRect/VBoxContainer/RateUs" method="_on_RateUs_pressed"]
